--- a/MC-Dex/MainWindow.xaml
+++ b/MC-Dex/MainWindow.xaml
@@ -18,13 +18,63 @@
         </DockPanel.Background>
 
 
-        <local:menuUC DockPanel.Dock="Top" Loaded="menuUC_Loaded"/>
-        
+        <!--<local:menuUC DockPanel.Dock="Top" Loaded="menuUC_Loaded"/>-->
+        <Grid MaxHeight="125" DockPanel.Dock="Top">
+            <Grid.Background>
+                <ImageBrush ImageSource="img\texture_grass.png" Stretch="UniformToFill" />
+            </Grid.Background>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Grid.Resources>
+                <Style TargetType="Image">
+                    <Setter Property="VerticalAlignment" Value="Top"/>
+                    <Setter Property="Margin" Value="0"/>
+                </Style>
+
+                <Style TargetType="Button">
+                    <Setter Property="Background" Value="{x:Null}"/>
+                    <Setter Property="BorderThickness" Value="0"/>
+                    <Setter Property="Height" Value="100"/>
+                    <Setter Property="VerticalAlignment" Value="Top"/>
+                    <Setter Property="Margin" Value="0,0,0,30"/>
+
+                    <!--Enlève couleur survol bouton-->
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type Button}">
+                                <Border Background="{TemplateBinding Background}">
+                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </Grid.Resources>
+
+            <Button Grid.Column="0" Click="Button_home">
+                <Image Source="img\logo.png" Width="180" Margin="-25,0,0,10" />
+            </Button>
+
+            <Image Source="img\MC-Dex.png" Width="250" Grid.Column="1" Height="100" Margin="0,20,0,30"/>
+
+            <Button Grid.Column="2" Click="Button_ajouter">
+                <Image Width="100" Source="img\ajouter.png" />
+            </Button>
+            <Button  Grid.Column="3">
+                <Image Source="img\loupe.png" Width="80"/>
+            </Button>
+        </Grid>
+
 
         <!--<local:home DockPanel.Dock="Bottom" Loaded="home_Loaded"></local:home>-->
 
-            
-        <local:pageObjet/>
+        <ContentControl DockPanel.Dock="Bottom" x:Name="contentControl">
+            <local:pageAjouter/>
+        </ContentControl>   
 
 
 
