page objet -> ajout texteBoxBase + police personnalisé fonctionnelle

--- a/MC-Dex/MainWindow.xaml
+++ b/MC-Dex/MainWindow.xaml
@@ -9,7 +9,7 @@
 
     
     <Window.Resources>
-
+        <FontFamily x:Key="Minecraft">font\minecraft_font.ttf#Minecraft</FontFamily>
     </Window.Resources>
 
     <DockPanel>
