--- a/MC-Dex/ligneGridStatUC.xaml
+++ b/MC-Dex/ligneGridStatUC.xaml
@@ -8,9 +8,10 @@
              d:DesignHeight="50" d:DesignWidth="800">
 
     <UserControl.Resources>
+        <FontFamily x:Key="Minecraft">font\minecraft_font.ttf#Minecraft</FontFamily>
         <Style TargetType="TextBlock">
                 <Setter Property="Margin" Value="10,5"/>
-                <Setter Property="FontFamily" Value="Minecraft"/>
+            <Setter Property="FontFamily" Value="{StaticResource Minecraft}"/>
                 <Setter Property="FontSize" Value="13"/>
                 <Setter Property="Foreground" Value="White"/>
                 <Setter Property="HorizontalAlignment" Value="Center"/>
@@ -19,7 +20,7 @@
         <Style TargetType="TextBox">
             <Setter Property="FontSize" Value="13"/>
             <Setter Property="Margin" Value="5"/>
-            <Setter Property="FontFamily" Value="Minecraft"/>
+            <Setter Property="FontFamily" Value="{StaticResource Minecraft}"/>
             <Setter Property="Background" Value="{x:Null}"/>
             <Setter Property="BorderThickness" Value="0"/>
         </Style>
