--- a/MC-Dex/pageObjet.xaml
+++ b/MC-Dex/pageObjet.xaml
@@ -9,15 +9,16 @@
 
 
     <UserControl.Resources>
+        <FontFamily x:Key="Minecraft">font\minecraft_font.ttf#Minecraft</FontFamily>
         <Style TargetType="TextBlock">
-            <Setter Property="FontFamily" Value="Minecraft"/>
+            <Setter Property="FontFamily" Value="{StaticResource Minecraft}"/>
             <Setter Property="FontSize" Value="20"/>
             <Setter Property="Foreground" Value="#C5C5C5"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
         </Style>
         <Style TargetType="TextBlock" x:Key="titre_partie">
             <Setter Property="Margin" Value="20,30,20,7"/>
-            <Setter Property="FontFamily" Value="Minecraft"/>
+            <Setter Property="FontFamily" Value="{StaticResource Minecraft}"/>
             <Setter Property="FontSize" Value="22"/>
             <Setter Property="Foreground" Value="#C5C5C5"/>
             <Setter Property="FontWeight" Value="Bold"/>
@@ -25,7 +26,7 @@
         <Style TargetType="TextBlock" x:Key="texte_partie">
             <Setter Property="TextWrapping" Value="Wrap"/>
             <Setter Property="Margin" Value="20,0"/>
-            <Setter Property="FontFamily" Value="Minecraft"/>
+            <Setter Property="FontFamily" Value="{StaticResource Minecraft}"/>
             <Setter Property="FontSize" Value="18"/>
             <Setter Property="Foreground" Value="White"/>
         </Style>
@@ -85,7 +86,7 @@
                             </Style>
                             <Style TargetType="TextBlock">
                                 <Setter Property="Margin" Value="20,5"/>
-                                <Setter Property="FontFamily" Value="Minecraft"/>
+                                <Setter Property="FontFamily" Value="{StaticResource Minecraft}"/>
                                 <Setter Property="FontSize" Value="18"/>
                                 <Setter Property="Foreground" Value="White"/>
                                 <Setter Property="HorizontalAlignment" Value="Center"/>
